.vscode/extensions/googlecloudtools.cloudcode-1.19.0/krm-catalog/apigroups/serving_knative_dev/serving.knative.dev_Service.sample.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: httpproxy-test-image
  namespace: default
spec:
  template:
    spec:
      containers:
      - env:
        - name: TARGET_HOST
          value: helloworld-test-image.default.svc.cluster.local
        image: ko://knative.dev/serving/test/test_images/httpproxy
