.vscode/extensions/googlecloudtools.cloudcode-1.19.0/krm-catalog/apigroups/serving_knative_dev/serving.knative.dev_Route.sample.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: route-example
  namespace: default
spec:
  traffic:
  - configurationName: configuration-example
    percent: 100
